<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent" android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/Contact_cpu_btn_str"
                    android:id="@+id/contact_cpu_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/Contactless_cpu_btn_str"
                    android:id="@+id/contactless_cpu_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/M1_card_btn_str"
                    android:id="@+id/m1_card_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/Ultralight_card_btn_str"
                    android:id="@+id/ultralight_card_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/Card_4428_btn_str"
                    android:id="@+id/card_4428_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/Card_4442_btn_str"
                    android:id="@+id/card_4442_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/Card_102_btn_str"
                    android:id="@+id/card_102_btn"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/mag_card_btn_str"
                    android:id="@+id/mag_card_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/ID_card_btn_str"
                    android:id="@+id/ID_card_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/SS_card_btn_str"
                    android:id="@+id/SS_card_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/Scan_2D_btn_str"
                    android:id="@+id/Scan_2D_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/Print_picture_btn_str"
                    android:id="@+id/Print_picture_btn"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/Fm11rf005_card_btn_str"
                    android:id="@+id/Fm11rf005_card_btn"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>