<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent" android:layout_width="match_parent">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/open_btn"
                android:text="@string/Open_btn_str"
                android:textSize="22dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_opera_btn"
                android:text="@string/Card_opera_str"
                android:textSize="22dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/device_opera_btn"
                android:text="@string/Device_opera_str"
                android:textSize="22dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/close_btn"
                android:text="@string/Close_btn_str"
                android:textSize="22dp"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>